Change underline to minus in the config file.

--- a/conf/hello.conf
+++ b/conf/hello.conf
@@ -1,8 +1,9 @@
 [hello]
-#command = java -jar Hello.jar
-command = java -jar -Dspring.profiles.actives=eureka1 Hello.jar
+command = java -jar Hello.jar
+#command = java -jar -Dspring.profiles.actives=eureka1 Hello.jar
 
 [hello2]
-#command = java -jar Hello2.jar
-command = java -jar -Dspring.profiles.actives=eureka2 Hello2.jar
+auto-start = 0
+command = java -jar Hello2.jar
+#command = java -jar -Dspring.profiles.actives=eureka2 Hello2.jar
 work-dir = ./other
